--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="overlay">
             <div class="content">
                 <h1>Joseph Rogers, <strong><span class="color">Student, Singer, and Diligent Worker</span></strong></h1>
-                <p class="lead">Currently a Computer Science Major in the Dietrich School of Arts and Sciences at the University of Pittsburgh, pursuing minors in Music and Linguistics.</p>
+                <p class="lead">Currently a Computer Science Major in the Dietrich School of Arts and Sciences at the University of Pittsburgh, pursuing minors in Music and History.</p>
                 <h1><a target="_blank" href="Files/Resume - Joseph Rogers.pdf"><button class="btn btn-primary">R&#232sum&#232</button></a></h1>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
             </div>
@@ -113,7 +113,7 @@
                             </li>
                             <li>
                                 <span class="fa fa-dot-circle-o"></span>
-                                <strong>Hardworking</strong> - <em>Strong grades combined with a strong work ethic, reflected by my 3.766 GPA.</em>
+                                <strong>Hardworking</strong> - <em>Strong grades combined with a strong work ethic, reflected by my 3.73 GPA.</em>
                             </li>
                         </ul>
                     </div>
@@ -251,7 +251,7 @@
                 <div class="col-md-3 col-sm-6 service">
                     <img alt='Glee Club' src='images/glee.jpg'>
                     <h4><strong>Pitt Men's Glee Club</strong></h4>
-                    <p>I will be preparing the group for our domestic tour in spring of 2016. I am also a member of the Pantherythnms, a subset of the Glee Club.</p>
+                    <p>I am serving as the Vice President of PMGC for the 2016-2017 school year. I am also a member of the Pantherythnms, a subset of the Glee Club.</p>
                 </div>
 
                 <div class="col-md-3 col-sm-6 service">
@@ -528,10 +528,6 @@
                         </div>
                         <div class="clearfix"></div>
                         <p>Joseph Rogers</p>
-                        <p>Campus Address:<br><br>
-                            3825 University Drive C<br>
-                            Pennsylvania Hall 0516-02<br>
-                            Pittsburgh, Pennsylvania 15213<br><br><br></p>
                         
                         <p>Email: <br>joseph.rogers@pitt.edu</p>
                         <p><a href="https://github.com/JosephDRogers23" target="_blank">GitHub</a></p>
