--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="content">
                 <h1>Joseph Rogers, <strong><span class="color">Student, Singer, and Diligent Worker</span></strong></h1>
                 <p class="lead">Currently a Computer Science Major in the Dietrich School of Arts and Sciences at the University of Pittsburgh, pursuing minors in Music and History.</p>
-                <h1><a target="_blank" href="Files/Resume - Joseph Rogers.pdf"><button class="btn btn-primary">R&#232sum&#232</button></a></h1>
+                <h1><a target="_blank" href="Files/JosephRogers.pdf"><button class="btn btn-primary">R&#232sum&#232</button></a></h1>
                 <a href="#tf-about" class="fa fa-angle-down page-scroll"></a>
             </div>
         </div>
