Directory cleanup and website additions

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <img alt="csc" src="images/github.gif" width="90">
                     <h4><strong>Personal Projects</strong></h4>
                     <p>Check out the repo for <a href="https://github.com/JosephDRogers23/jdr86-cs1520-term-project" target="_blank" >my coffee website side project</a>, the <a href="www.pittmensgleeclub.org" target="_blank">Pitt Men's Glee Club site</a> that I helped to design, or <a href="http://pitt.edu/~heinzcc" target="_blank">the Heinz Chapel Choir website</a> that I updated and revamped in 2015!</p>
-                        <p>Additionally, <a href="https://ucisportfolios.pitt.edu/josephrogers/">see my digital portfolio for my Related Concentration in European and Eurasian Studies at Pitt. I was one of the first people to have a digital portfolio in this program.</a></p>
+                        <p>Additionally, <a href="https://ucisportfolios.pitt.edu/josephrogers/">see my digital portfolio</a> for my Related Concentration in European and Eurasian Studies at Pitt. I was one of the first people to have a digital portfolio in this program.</p>
                 </div>
             </div>
             </div>
